style.css
* {
  box-sizing: border-box;
}

body {
  font-family: 'Oswald', sans-serif;
  background: linear-gradient(#fae4dc, #e25d28);
}

a {
  text-decoration: none;
  list-style: none;
}

nav {
  text-align: center;
  padding: 30px 0;
  background: linear-gradient(#fcf0eb, #fae4dc);
  position: fixed;
  width: 100%;
}

nav a {
  padding: 0 1.5rem;
}

img {
  max-width: 40%;
  /*min-width: 20%;*/
  height: auto;
  max-height: 70%;
  /*min-height: 20%;*/
}

#fcc {
  margin: 1rem 1.75rem;
  min-width: 240px;
  /*max-width: 465px;*/
}

div {
  height: calc(100vh - 78.4px);
  display: flex;
  flex-direction: column wrap;
  justify-content: space-around;
  border: 2px solid black;
  align-items: center;
  padding: 0 1.5rem;
}

div p:not(.butShadow) {
  width: 500px;
  font-size: 46px;
  text-align: center;
  line-height: 1.4;
}

#intro {
  height: 100vh;
  padding-top: 78.4px;
}

.butShadow {
  margin: 0;
  padding: 0;
  font-weight: 700;
  font-size: 500px;
  text-transform: uppercase;
  text-shadow: -20px -20px #333,
               -40px -40px #666,
               -60px -60px #999;
}

#contact {
  /*text-align: center;*/
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

#contact p {
  margin: 1rem 1.75rem;
}


/*        MEDIA QUERIES        */

@media (max-width: 950px) {
  nav a {
    padding: 0 1.1rem;
  }

  div p:not(.butShadow) {
    margin: 0 1.75rem;
    font-size: 36px;
  }

  div p:not(#contact) {
    margin: 1rem 1.75rem;
  }

  img {
    margin: 0 1.75rem;
  }

  #fcc {
    margin: 1rem 1.75rem;
  }

  .butShadow {
    font-size: 400px;
  }
}

@media (max-width: 750px) {
  nav a {
    padding: 0 0.85rem;
  }

  .butShadow {
    font-size: 275px;
  }
}

@media (max-width: 588px) {
  nav {
    padding: 15px 0;
  }

  nav a {
    display: inline-block;
    padding: 0 0.85rem;
    margin: 0.85rem 0;
  }

  div {
    height: calc(100vh - 114.8px);
  }

  div p:not(.butShadow) {
    width: 300px;
    margin: 0 1.5rem;
    font-size: 28px;
  }

  div p:not(#contact) {
    margin: 1rem 1.75rem;
  }

  .butShadow {
    font-size: 175px;
  }
}

@media (max-width: 525px) {
  div {
    flex-direction: column;
  }

  div img {
    order: 2;
  }

  .butShadow {
    text-shadow: -10px -10px #333,
                 -20px -20px #666,
                 -30px -30px #999;
  }
}

